update pic, add gc param